trunk/Archive2/0a/cd0f7e1777d619/output
main.cpp:1:97: error: stray ‘#’ in program
 ijijijijnuhgh5555555555555555555555555yguguytytr65r7uohiuhuygugrfvhuirfiuhycgxhfhdfghfghfgdhuuuu#hgfduuuuuint()#include <iostream>№#include <iostream>
                                                                                                 ^
main.cpp:1:112: error: stray ‘#’ in program
 ijijijijnuhgh5555555555555555555555555yguguytytr65r7uohiuhuygugrfvhuirfiuhycgxhfhdfghfghfgdhuuuu#hgfduuuuuint()#include <iostream>№#include <iostream>
                                                                                                                ^
main.cpp:1:1: error: stray ‘\342’ in program
 ijijijijnuhgh5555555555555555555555555yguguytytr65r7uohiuhuygugrfvhuirfiuhycgxhfhdfghfghfgdhuuuu#hgfduuuuuint()#include <iostream>№#include <iostream>
 ^
main.cpp:1:1: error: stray ‘\204’ in program
main.cpp:1:1: error: stray ‘\226’ in program
main.cpp:1:134: error: stray ‘#’ in program
 ijijijijnuhgh5555555555555555555555555yguguytytr65r7uohiuhuygugrfvhuirfiuhycgxhfhdfghfghfgdhuuuu#hgfduuuuuint()#include <iostream>№#include <iostream>
                                                                                                                                      ^
main.cpp:25:2: error: stray ‘#’ in program
 }#include <iostream>
  ^
main.cpp:49:2: error: stray ‘#’ in program
 }#include <iostream>
  ^
main.cpp:1:1: error: ‘ijijijijnuhgh5555555555555555555555555yguguytytr65r7uohiuhuygugrfvhuirfiuhycgxhfhdfghfghfgdhuuuu’ does not name a type
 ijijijijnuhgh5555555555555555555555555yguguytytr65r7uohiuhuygugrfvhuirfiuhycgxhfhdfghfghfgdhuuuu#hgfduuuuuint()#include <iostream>№#include <iostream>
 ^
In file included from main.cpp:2:0:
/usr/include/c++/4.8/exception:35:37: error: expected declaration before end of line
 #pragma GCC visibility push(default)
                                     ^
